fix overflow and flex

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,6 +204,7 @@ img.breaklimit {
 
 .why-height {
   display: flex;
+  display: -webkit-flex;
   justify-content: center;
   align-items: center;
   padding: 50px 0 0;
@@ -240,6 +241,7 @@ img.breaklimit {
 
 .sponsor-height {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
